...
            android:layout_height="wrap_content"
            android:text="@string/reset"
            android:layout_marginEnd="8dp"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/novaBiljkaBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/novo"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>

...
